syntax = "proto3";

option csharp_namespace = "FeedReader.Share.Protocols";

service AuthServerApi
{
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest
{
    string Token = 1;
}

message LoginResponse
{
    string Token = 1;
    string UserId = 2;
}