syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protocols/Types.proto";

option csharp_namespace = "FeedReader.Share.Protocols";

service WebServerApi
{
    rpc DiscoverFeeds(DiscoverFeedsRequest) returns (DiscoverFeedsResponse);
    rpc SubscribeFeed(SubscribeFeedRequest) returns (SubscribeFeedResponse);
    rpc SubscribeEvents(google.protobuf.Empty) returns (stream Event);
    rpc GetFeedItems(GetFeedItemsRequest) returns (GetFeedItemsResponse);
}

message DiscoverFeedsRequest
{
    string Query = 1;
}

message DiscoverFeedsResponse
{
    repeated FeedInfo Feeds = 1;
}

message SubscribeFeedRequest
{
    string FeedId = 1;
    bool Subscribe = 2;
}

message SubscribeFeedResponse
{
}

message GetFeedItemsRequest
{
    string FeedId = 1;
    int32 Page = 2;
}

message GetFeedItemsResponse
{
    repeated FeedItem FeedItems = 1;
}